--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 Django==1.5.1
 argparse==1.2.1
+configparser==3.3.0r2
 distribute==0.6.34
 dj-database-url==0.2.1
+django-authtools==0.1.1
+docutils==0.10
 gunicorn==0.17.4
 psycopg2==2.5
+pyinotify==0.9.4
+six==1.3.0
 wsgiref==0.1.2
